--- a/sav_factures/gestion/templates/gestion/modifier_client.html
+++ b/sav_factures/gestion/templates/gestion/modifier_client.html
@@ -1,11 +1,16 @@
+{% load static %}
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Modifier un Client</title>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+
 </head>
 <body>
+ {%block content%}
     <h1>Modifier le Client : {{ form.instance.client.nom }}</h1>
     <form method="POST">
         {% csrf_token %}
@@ -13,5 +18,20 @@
         <button type="submit">Enregistrer les modifications</button>
     </form>
     <a href="{% url 'liste_clients' %}">Retour à la liste des clients</a>
+{%endblock%}
+    <script>
+        document.addEventListener('DOMContentLoaded', function () {
+            {% if messages %}
+                {% for message in messages %}
+                    Swal.fire({
+                        title: "{{ message.tags|capfirst }}",
+                        text: "{{ message }}",
+                        icon: "{{ message.tags }}", // success, error, warning, info
+                        confirmButtonText: "OK"
+                    });
+                {% endfor %}
+            {% endif %}
+        });
+      </script>
 </body>
 </html>
