--- a/sav_factures/gestion/templates/gestion/liste_ascenseurs.html
+++ b/sav_factures/gestion/templates/gestion/liste_ascenseurs.html
@@ -1,4 +1,8 @@
 <h1>Liste des ascenseurs</h1>
+<form method= "GET" action="{% url 'liste_ascenseurs'%}">
+    <input type="text" name="q" placeholder=" Rechercher un ascenseur ..."  value="{{request.GET.get}}">
+    <button type= "submit">Rechercher </button>
+</form>
 <table border= "1">
     <thead>
         <tr>
@@ -33,5 +37,11 @@
         <a href="{% url 'ajouter_ascenseur' %}">Ajouter un ascenseur</a>
         <br><br/>
     </tbody>
-</table>
+</table><br></br>
+<div class="d-flex justify-content-end mb-3">
+    <a href="{% url 'rapport_ascenseurs_excel' %}" class="btn btn-success">
+        Télécharger Rapport Ascenseurs (Excel)
+    </a>
+</div>
+
 
